# aoc2025

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/aoc2025/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  main.py
